# oresat-c3-watchdog

./: Cargo.toml  README.md  runner.sh
.cargo/: config  config.toml  runner.sh
.github/workflows/: ci.yml
debian/: oresat-c3-watchdog.service
src/: main.rs
tests/: test_ping.sh
